# hime

./: .gitignore  .hgignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  HimeSystems.sln  HimeSystems.vsmdi  Local.testsettings  README.md  TraceAndTestImpact.testsettings  VersionInfo.cs  azure-pipeline.yml  build-checks.sh  build-env.sh  build-publish-s3.sh  build-publish.sh  build.bat  build.sh  cmd  doxygen.conf  gendarmeConfig.xml  javascript.gram  release.sh
.assets/: Hime.mdpolicy
.assets/Styles/: Notepadpp_Suite.xml
.releng/: README.md  VersionInfo.cs  build.bat  build.sh  doxygen.conf  hime.public  hime.snk  release.bat  release.sh  version.py  version.sh
.releng/buildenv/: Dockerfile  build.sh
.releng/buildenv-light/: Dockerfile  build.sh
.releng/standalone/: README.txt  himecc  himecc.bat  parseit  parseit.bat
.releng/toolkit/: version-update.sh  version.bat  version.sh  xmlutils.py
Exe.Benchmark/: Benchmark.cs  Exe.Benchmark.csproj  Program.cs
Exe.Benchmark/Languages/: CSharp4.gram
Exe.Benchmark/Properties/: AssemblyInfo.cs
Exe.HimeCC/: CommandLine.gram  CommandLineLexer.cs  CommandLineParser.cs  Exe.HimeCC.csproj  Options.cs  Program.cs
Exe.HimeCC/Properties/: AssemblyInfo.cs
Exe.HimeDemo/: Exe.HimeDemo.csproj  IExecutable.cs  Program.cs  WinTreeView.Designer.cs  WinTreeView.cs
Exe.HimeDemo/Grammars/: Earth.CIL.CSharp.gram  Earth.Java.Bytecode.gram  Earth.Java.ClassFile.format
Exe.HimeDemo/Languages/: ANSI_C.gram  CSharp4.gram  CommandLine.gram  ECMAScript.gram  FileCentralDogma.gram  MathExp.gram  Test.gram  Test1.gram  (+1 more)
Hime.CentralDogma/: Hime.CentralDogma.csproj
Hime.Demo/: Hime.Demo.csproj  IExecutable.cs  LALR1-ambiguous.cs  MathExp.cs  Program.cs  TestAnalyze.cs  WinTreeView.cs
Hime.NUnit/: BaseTestSuite.cs  Hime.NUnit.csproj
Hime.Redist/: AST.cs  BaseBinary.cs  BufferedTextReader.cs  BufferedTokenReader.cs  GSS.cs  Hime.Redist.csproj  Lexer.cs  Parser.cs  ParserLR1.cs  ParserLRStar.cs  ParserRNGLR1.cs  SPPF.cs  Symbols.cs
Hime.Tests/: Hime.Tests.csproj  Suite00_MethodLR1.cs  Suite01_CFGramCompiler.cs  Suite02_LR.cs
Hime.VSTests/: Hime.VSTests.csproj
Lib.CentralDogma/: Lib.CentralDogma.csproj  Lib.CentralDogma.nuspec
Lib.Redist/: Lib.Redist.csproj  Lib.Redist.nuspec
Tests/: BaseParseSuite.cs  BaseTestSuite.cs  Tests.csproj
cli/: Hime.CLI.csproj
core/: Hime.SDK.csproj  Hime.SDK.nuspec  README.md
extras/: NotepadppStyle.xml
himecc/: Cargo.toml  Exe.HimeCC.csproj  HimeCC.csproj  Options.cs  Program.cs  README.md  build.rs  himecc.csproj
himecc-rust/: Cargo.toml
himecc-rust/src/: errors.rs  main.rs
himecc/Properties/: AssemblyInfo.cs
himecc/Sources/: CommandLine.cs  CommandLineLexer.cs  CommandLineParser.cs  Program.cs
himecc/src/: main.rs
himev/: App.xaml  App.xaml.cs  himev.csproj
langserv/: Cargo.toml  README.md
langserv/src/: main.rs  symbols.rs  workspace.rs
parseit/: Cargo.toml  Parseit.csproj  Program.cs
parseit-net/: Parseit.csproj  Program.cs
parseit-rust/: .rustfmt.toml  Cargo.toml
parseit-rust/src/: main.rs
parseit/src/: main.rs
releng/: HOWTO.txt  README.md  VersionInfo.cs  doxygen.conf  nuget-pack.bat  release-nuget.sh  release-standalone.sh  release.bat  release.sh
runtime-java/: pom.xml
runtime-net/: Hime.Redist.csproj  Hime.Redist.nuspec  README.md
runtime-rust/: Cargo.toml  README.md  build.rs
runtime-rust/src/: ast.rs  errors.rs  lexer.rs  lib.rs  result.rs  sppf.rs  symbols.rs  text.rs  tokens.rs  utils.rs
runtime-rust/src/hime/: mod.rs
runtime-rust/src/hime/redist/: lexer.rs  mod.rs
runtime-rust/src/lexers/: automaton.rs  context.rs  fuzzy.rs  implementations.rs  impls.rs  interface.rs  mod.rs
runtime-rust/src/parsers/: automaton.rs  lrk.rs  mod.rs  rnglr.rs  subtree.rs
runtime-rust/src/text/: implementations.rs  impls.rs  interface.rs  mod.rs  utf16.rs
runtime-rust/src/utils/: biglist.rs  bin.rs  iterable.rs  mod.rs
runtime-rust/tests/: lexer_automaton.rs  parser_lrk_automaton.rs
sdk/: Hime.SDK.csproj  Hime.SDK.nuspec  README.md
sdk-debugger/: Cargo.toml  README.md
sdk-debugger/src/: main.rs
sdk-java/: pom.xml
sdk-net/: Hime.SDK.csproj
sdk-rust/: Cargo.toml  README.md
sdk-rust-gen/: Cargo.toml
sdk-rust-gen/src/: main.rs
sdk-rust/src/: errors.rs  finite.rs  grammars.rs  lib.rs  lr.rs  sdk.rs  unicode.rs
sdk-rust/src/automata/: dfa.rs  fa.rs  lr.rs  mod.rs  nfa.rs
sdk-rust/src/errors/: mod.rs  print.rs
sdk-rust/src/grammar/: mod.rs  rules.rs  symbols.rs
sdk-rust/src/input/: mod.rs  parser.rs
sdk-rust/src/loaders/: HimeGrammar.gram  hime_grammar.rs  mod.rs  parser.rs
sdk-rust/src/output/: assembly_java.rs  assembly_java.xml  assembly_net.csproj  assembly_net.rs  assembly_rust.rs  assembly_rust.toml  helper.rs  lexer_data.rs  lexer_java.rs  lexer_net.rs  lexer_rust.rs  mod.rs  parser_data.rs  parser_java.rs  parser_net.rs  parser_rust.rs
sdk-rust/src/unicode/: blocks.rs  categories.rs  mod.rs
sdk-rust/tests/: regressions.rs
sdk-unicode-gen/: Cargo.toml  build.rs
sdk-unicode-gen/src/: main.rs
tests/: execute.bat  execute.sh
tests-driver/: Cargo.toml  Tests.Driver.csproj
tests-driver/Properties/: AssemblyInfo.cs
tests-driver/Resources/: Fixture.gram
tests-driver/Resources/Suites/: LexicalRules.suite  SyntacticRules.suite  UnicodeBlocks.suite
tests-driver/Sources/: Fixture.cs  OutputTest.cs  ParsingTest.cs  Program.cs  Test.cs  TestResult.cs
tests-driver/src/: main.rs  model.rs
tests-driver/src/fixtures/: ContextSensitive.suite  Errors.suite  GrammarOptions.suite  Regressions.suite  TreeActions.suite  UnicodeBlocks.suite
tests-driver/src/loaders/: expected_tree.rs  fixture.rs  mod.rs
tests-driver/src/model/: mod.rs  results.rs
tests-executor-java/: pom.xml
tests-executor-net/: ExpectedTreeLexer.cs  ExpectedTreeParser.cs  Program.cs  Tests.Executor.csproj
tests-executor-rust/: Cargo.toml  build.rs
tests-executor-rust/src/: expected_tree.rs  main.rs
unicode-gen/: Cargo.toml  README.md
unicode-gen/src/: main.rs
utilities/: benchmark.bat  benchmark.sh
utils-demo/: Utils.Demo.csproj
(+1891 files in other folders)
