[package]
name = "himecc"
version = "3.5.1"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Generator of lexers and parsers for the Hime runtime."
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"
include = ["README.md", "Cargo.toml", "src/**/*.rs"]
edition = "2018"

[dependencies]
hime_redist = "3.5.1"
hime_sdk = "3.5.1"
clap = "2.32"
ansi_term = "0.11"

[badges]
maintenance = { status = "actively-developed" }
