[package]
name = "hime_compiler"
version = "3.5.2"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Generator of lexers and parsers for the Hime runtime."
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"
include = ["README.md", "Cargo.toml", "src/**/*.rs"]
edition = "2021"

[[bin]]
name = "himecc"
path = "src/main.rs"

[dependencies]
hime_redist = "3.5.2"
hime_sdk = { version = "3.5.2", features = ["print_errors"] }
clap = "2.33"
serde_json = "1"

[badges]
maintenance = { status = "actively-developed" }
