[package]
name = "hime_compiler"
version = "4.0.0"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "CLI tool for the generation of LR and GLR parsers for the Hime runtime."
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"
include = ["README.md", "Cargo.toml", "src/**/*.rs"]
edition = "2021"

[[bin]]
name = "himecc"
path = "src/main.rs"

[dependencies]
hime_redist = "4.0.0"
hime_sdk = { version = "4.0.0", features = ["print_errors"] }
clap = "3"
serde_json = "1"

[badges]
maintenance = { status = "actively-developed" }
