[package]
name = "hime_langserv"
version = "4.3.0"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Language server for Hime grammars"
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "Apache-2.0"
include = ["README.md", "Cargo.toml", "build.rs", "src/**/*.rs"]
edition = "2021"

[dependencies]
clap = "4.0"
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
hime_redist = "4.3.0"
hime_sdk = "4.3.0"
tower-lsp = "0.20"

[badges]
maintenance = { status = "actively-developed" }
