[package]
name = "parseit"
version = "3.3.1"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Command line to parse a piece of input using a packaged parser."
homepage = "https://cenotelie.fr/hime"
repository = "https://bitbucket.org/cenotelie/hime"
keywords = ["hime", "parser", "generator", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"

[dependencies]
hime_redist = "3.3.1"
libloading = "0.4.3"

[patch.crates-io]
hime_redist = { path = "../runtime-rust" }