[package]
name = "parseit"
version = "3.5.1"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Command line to parse a piece of input using a packaged parser."
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
keywords = ["hime", "parser", "generator", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"
edition = "2018"

[dependencies]
hime_redist = "3.5.1"
libloading = "0.4.3"
