[package]
name = "hime_redist"
version = "4.1.2"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Redistributable runtime library for parsers generated with Hime (LR, RNGLR)."
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"
include = ["README.md", "Cargo.toml", "build.rs", "src/**/*.rs"]
edition = "2021"

[dependencies]
serde = "1"
serde_derive = "1"

[badges]
maintenance = { status = "actively-developed" }