[package]
name = "hime_redist"
version = "4.3.0"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Redistributable runtime library for parsers generated with Hime (LR, RNGLR)."
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "Apache-2.0"
include = ["README.md", "Cargo.toml", "build.rs", "src/**/*.rs"]
edition = "2021"

[features]
default = ["std"]
debug = []
std = ["serde/std"]

[dependencies]
dyn-clone = "1.0.14"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[badges]
maintenance = { status = "actively-developed" }
