[package]
name = "hime_sdk_debugger"
version = "4.3.0"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Introspection tool for parsers generated with himecc"
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "generator", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "Apache-2.0"
include = ["README.md", "Cargo.toml", "src/**/*.rs"]
edition = "2021"

[dependencies]
hime_redist = "4.3.0"
clap = "4.5"

[badges]
maintenance = { status = "actively-developed" }
