[package]
name = "hime_sdk_gen"
version = "3.3.2"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Generator for Unicode data embedded in the Rust SDK"
homepage = "https://cenotelie.fr/hime"
repository = "https://bitbucket.org/cenotelie/hime"
keywords = ["hime", "parser", "generator", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"

[dependencies]
hime_sdk = "3.3.2"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
regex = "0.2"

[patch.crates-io]
hime_redist = { path = "../runtime-rust" }
hime_sdk = { path = "../sdk-rust" }