[package]
name = "hime_sdk"
version = "3.4.2"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Development kit for the generation of LR and RNGLR parsers programmatically or in command line. Full API for the manipulation of context-free grammars."
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"
include = ["README.md", "Cargo.toml", "src/**/*.rs"]
edition = "2018"

[dependencies]
hime_redist = { path = "../runtime-rust" }
log = "0.4"
ansi_term = "0.11"

[badges]
maintenance = { status = "actively-developed" }
