[package]
name = "hime_sdk"
version = "3.5.2"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Development kit for the generation of LR and RNGLR parsers programmatically or in command line. Full API for the manipulation of context-free grammars."
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"
include = ["README.md", "Cargo.toml", "src/**/*.rs"]
edition = "2018"

[features]
default = []
print_errors = ["ansi_term"]

[dependencies]
hime_redist = "3.5.2"
lazy_static = "1.4"
rand = "0.7"
ansi_term = { version = "0.12", optional = true}

[badges]
maintenance = { status = "actively-developed" }
