[package]
name = "hime_sdk"
version = "4.3.0"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Development kit for the generation of LR and RNGLR parsers programmatically or in command line. Full API for the manipulation of context-free grammars."
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "Apache-2.0"
include = ["README.md", "Cargo.toml", "build.rs", "src/**/*"]
edition = "2021"

[features]
default = []
print_errors = ["miette"]

[dependencies]
hime_redist = "4.3.0"
rand = "0.8"
miette = { version = "5.6", optional = true}

[badges]
maintenance = { status = "actively-developed" }
