[package]
name = "hime_sdk_unicode_gen"
version = "4.0.1"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Download latest Unicode blocks and category data and generate appropriate code for SDK"
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"
include = ["README.md", "Cargo.toml", "build.rs", "src/**/*.rs"]
edition = "2021"

[dependencies]
openssl-sys = "*"
reqwest= { version="0.11", features=["blocking"] }
regex="1"
hime_sdk = "4.0.0"

[features]
vendored = ["openssl-sys/vendored"]

[badges]
maintenance = { status = "actively-developed" }
