[package]
name = "hime_sdk_unicode_gen"
version = "4.4.0"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Download latest Unicode blocks and category data and generate appropriate code for SDK"
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "Apache-2.0"
include = ["README.md", "Cargo.toml", "build.rs", "src/**/*.rs"]
edition = "2021"

[dependencies]
reqwest= { version="0.12", default-features = false, features=["blocking", "rustls-tls"] }
regex="1"
hime_sdk = "4.3.0"

[badges]
maintenance = { status = "actively-developed" }
