[package]
name = "hime_tests_driver"
version = "4.4.0"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Main driver for the test suits"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
keywords = ["hime", "parser", "generator", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
hime_redist = "4.3.0"
hime_sdk = { version = "4.4.0", features = ["print_errors"] }
libloading = "0.8"
miette = { version = "7.2", features = ["fancy"]}

# Used for tests debugging
# hime_generated = { path = "../tests-results/hime_generated-3.3.1" }
