[package]
name = "tests_executor_rust"
version = "3.3.2"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Executor for tests for the Hime Parser Generator in Rust."
homepage = "https://cenotelie.fr/hime"
repository = "https://bitbucket.org/cenotelie/hime"
keywords = ["hime", "parser", "generator", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"

[dependencies]
hime_redist = "3.3.2"
libloading = "0.4.3"
# Used for tests debugging
# hime_generated = { path = "../tests-results/hime_generated-3.3.1" }

[patch.crates-io]
hime_redist = { path = "../runtime-rust" }