[package]
name = "hime_tests_executor_rust"
version = "4.1.1"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Executor for tests for the Hime Parser Generator in Rust."
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
keywords = ["hime", "parser", "generator", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"
edition = "2021"

[dependencies]
hime_redist = "4.0.0"
libloading = "0.7"
# Used for tests debugging
# hime_generated = { path = "../tests-results/hime_generated-3.3.1" }
