[package]
name = "hime_unicode_gen"
version = "3.4.2"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Download latest Unicode blocks and category data and generate appropriate code for SDK"
documentation = "https://cenotelie.fr/projects/hime"
homepage = "https://cenotelie.fr/projects/hime"
repository = "https://github.com/cenotelie/hime"
readme = "README.md"
keywords = ["hime", "parser", "lr", "glr", "rnglr"]
categories = ["algorithms", "parsing", "parser-implementations", "text-processing"]
license = "LGPL-3.0"
include = ["README.md", "Cargo.toml", "src/**/*.rs"]
edition = "2018"

[dependencies]
reqwest= { version="0.10", features=["blocking"] }
regex="1.3"
hime_sdk = "3.4"

[badges]
maintenance = { status = "actively-developed" }